<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
>

	<ListPreference
		android:entries="@array/shaft_server_labels"
		android:entryValues="@array/shaft_server_addresses"
		android:defaultValue="shuchton.heroku.com"
		android:summary="@string/shaft_server_dialog"
		android:dialogTitle="@string/shaft_server_dialog"
		android:key="@string/shaft_server_key"
		android:title="@string/shaft_server_title"
		android:showDefault="true" />

	<ListPreference
		android:entries="@array/chat_server_labels"
		android:entryValues="@array/chat_server_addresses"
		android:defaultValue="192.168.1.103"
		android:summary="@string/chat_server_dialog"
		android:dialogTitle="@string/chat_server_dialog"
		android:key="@string/chat_server_key"
		android:title="@string/chat_server_title"
		android:showDefault="true" />

</PreferenceScreen>
